+ Entity Framework Core + Sqlite + JobScheduler + MongoDB to store settings

--- a/Email.Svc/appsettings.json
+++ b/Email.Svc/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "MongoDefault": "mongodb://localhost:27017/pricerdb"
   }
 }
