--- a/Email.Svc/Email.Svc.csproj
+++ b/Email.Svc/Email.Svc.csproj
@@ -6,13 +6,30 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Compile Remove="Extensions\**" />
+    <Content Remove="Extensions\**" />
+    <EmbeddedResource Remove="Extensions\**" />
+    <None Remove="Extensions\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Services\Scheduling\CheckMailboxTask.cs" />
+    <Compile Remove="Services\Scheduling\HostedService.cs" />
+    <Compile Remove="Services\Scheduling\IScheduledTask.cs" />
+    <Compile Remove="Services\Scheduling\SchedulerHostedService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="1.22.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.4.4" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.4.1" />
+    <PackageReference Include="Quartz" Version="3.0.0-beta1" />
     <PackageReference Include="StructureMap" Version="4.5.3" />
   </ItemGroup>
 
