i don't know what is it. Just save changes

--- a/Email.Svc/appsettings.json
+++ b/Email.Svc/appsettings.json
@@ -13,6 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "MongoDefault": "mongodb://localhost:27017/pricerdb"
+    "MongoDefault": "mongodb://localhost:27017/pricerdb",
+    "SqliteConnection": "Filename=suppliers.db"
   }
 }
