--- a/Email.Svc/Email.Svc.csproj
+++ b/Email.Svc/Email.Svc.csproj
@@ -26,7 +26,6 @@
   <ItemGroup>
     <PackageReference Include="MailKit" Version="1.22.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.4.4" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.4.1" />
     <PackageReference Include="Quartz" Version="3.0.0-beta1" />
@@ -35,6 +34,10 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Email.EntityFramework\Email.EntityFramework.csproj" />
   </ItemGroup>
 
 </Project>
